# rpc-swarm

./: Cargo.toml  README.md  rustfmt.toml
config/: default.toml  example.toml
src/: error.rs  lib.rs  main.rs
src/config/: settings.rs
src/health/: checker.rs  mod.rs  monitor.rs
src/load_balancer/: algorithms.rs  endpoint.rs  mod.rs  router.rs
src/metrics/: collector.rs
src/protocols/: http.rs  mod.rs  websocket.rs
