[package]
name = "rpc-swarm"
version = "0.1.0"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
hyper = { version = "1.5", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
serde_json = "1.0"
url = "2.5"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }