[package]
name = "rpc-swarm"
version = "0.1.0"
edition= "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
hyper = { version = "1.5", features = ["full"] }
# Add these new helper crates
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
# ---
tokio-tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.5", features = ["serde"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
serde_json = "1.0"
dotenvy = "0.15"
futures-util = "0.3"


[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
